[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["kozlovmv <mikhail.kozlov@eventplatform.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
litestar = "^2.13.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
